<resources>
    <string name="app_name">World Real Estate</string>
    <string name="go_to_login_activity">Go to LogIn activity</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here!</string>
    <string name="password">Password</string>
    <string name="enter_app">Enter app</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="all">All</string>
    <string name="sign_out">Sign Out</string>
    <string name="navigation_drawer_open">close drawer</string>
    <string name="navigation_drawer_close">open drawer</string>
    <string name="description">Description</string>
    <string name="no_description_found">NO DESCRIPTION FOUND</string>
    <string name="images">Images</string>
    <string name="media">Media</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms">Number of\nrooms</string>
    <string name="number_of_bedrooms">Number of\nbedrooms</string>
    <string name="filtered_list">Filtered list</string>
    <string name="location">Location</string>
    <string name="long_description">Long Description</string>
    <string name="submit">Submit</string>
    <string name="points_of_interest">Points of\ninterest</string>
    <string name="address">Address</string>
    <string name="map">Map</string>
    <string name="amount">Amount</string>
    <string name="no_entries">No Entries</string>
    <string name="get_filtered_list">Get filtered list</string>
    <string name="price">Price in dollars</string>
    <string name="email_not_found">It was not found a user with that email</string>
    <string name="change_currency">Change_currency</string>
    <string name="change_to_dollars">Change to dollars</string>
    <string name="change_to_d">Change to dollars</string>
    <string name="change_to_euro">Change to euros</string>
    <string name="price_in_euros">Price in Euros</string>
    <string name="all_fileds">All fields must be answer, please try again</string>
    <string name="register_sucess">Register succeed</string>
    <string name="ry_again">Register failed, please try again</string>
    <string name="agent_responsible">Agent responsible</string>
    <string name="agent">Agent</string>
    <string name="you_must_add_at_least">You must add at least one photo</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_must_add_a_point_of_int">You must add a point of interest</string>
    <string name="error">Error</string>
    <string name="real_estate_updated">Real Estate updated</string>
    <string name="real_estate_added">Real Estate added</string>
    <string name="updated">updated</string>
    <string name="added">added</string>
    <string name="short_description">Short description</string>
    <string name="type">Type</string>
    <string name="register">Register</string>
    <string name="doesnt_have_map_permitions">This aplication doen\'t have permition to show the map</string>
    <string name="we_cant_show_the_map">We can\'t show the map</string>
    <string name="ok">Ok</string>
    <string name="not_sold_yet">Not sold yet</string>
    <string name="price_not_set_yet">No price info</string>
</resources>
