<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="worldrealestate.ui.activities.LogInActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logowhite" />

    <TextView
        android:layout_width="407dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#402993"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/activity_log_in_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginBottom="8dp"
        android:background="@drawable/activity_login_input_text_background"
        android:hint="Email"
        android:inputType="textShortMessage|textEmailAddress"
        android:padding="@dimen/activity_login_padding_input_text"
        android:textColor="#9E9797"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/activity_log_in_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginBottom="8dp"
        android:background="@drawable/activity_login_input_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/activity_login_padding_input_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_log_in_email_edit_text"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/activity_log_in_register_text_view"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:text="@string/don_t_have_an_account_register_here"
        android:textColor="#93294D"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_log_in_register_button"
        app:layout_constraintVertical_bias="0.325" />

    <Button
        android:id="@+id/activity_log_in_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginEnd="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginBottom="160dp"
        android:background="@drawable/yellow_btn_background"
        android:text="@string/log_in"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
