<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logowhite" />

    <TextView
        android:layout_width="407dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#402993"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/activity_register_email_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/activity_register_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginBottom="8dp"
        android:background="@drawable/activity_login_input_text_background"
        android:hint="Email"
        android:inputType="textShortMessage|textEmailAddress"
        android:padding="@dimen/activity_login_padding_input_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488" />

    <EditText
        android:id="@+id/activity_register_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginBottom="8dp"
        android:background="@drawable/activity_login_input_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/activity_login_padding_input_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_email_edit_text"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/activity_register_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginEnd="@dimen/activity_login_margin_horizontal_input_text"
        android:layout_marginBottom="160dp"
        android:background="@drawable/yellow_btn_background"
        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>